--- a/advanced-form-management/src/App.css
+++ b/advanced-form-management/src/App.css
@@ -39,8 +39,15 @@
 
 .form-container {
   margin: 5rem auto;
+  width: 25rem;
 }
 
-input {
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input, button {
   margin-top: .5rem;
 }
